clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/kill_loans_by_write_to_path/kill_loans_by_write_to_path.cbs
// RUN: %clang_cc1 -verify %s

struct S {
  int a;
};

void use_mut(int* borrow p);
void use_immut(const int* borrow p);
void use_mut_s(struct S* borrow p);

void test1() {
  struct S s1 = { .a = 1 };
  struct S s2 = { .a = 2 };
  struct S* borrow sp = &mut s1; // expected-note {{`s1.a` is borrowed here}}
                                 // expected-note@-1 {{`s1.a` is borrowed here}}
  int* borrow p = &mut sp->a;
  sp = &mut s2;
  sp->a = 3;
  s1.a = 2; // expected-error {{cannot assign to `s1.a` because it is borrowed}}
  use_mut(p);
  s1.a = 2; // expected-error {{cannot assign to `s1.a` because it is borrowed}}
  use_mut_s(sp);
}